--- a/css/styles.css
+++ b/css/styles.css
@@ -311,3 +311,19 @@ nav .right a span {
 .contact-section .group form button:hover{
   filter: brightness(.9);
 }
+
+/* Animations */
+.skills-section, .education-section, .showcase-section, .contact-section {
+  animation: fadeInUp 1.2s ease-in-out;
+}
+
+@keyframes fadeInUp {
+  0% {
+      opacity: 0;
+      transform: translateY(20px);
+  }
+  100% {
+      opacity: 1;
+      transform: translateY(0);
+  }
+}
