--- a/css/media.css
+++ b/css/media.css
@@ -31,7 +31,7 @@
 }
 
 @media (max-width: 689px) {
-  /* NAVBAR */
+  /* Navbar */
   nav {
     padding: 0 20px;
   }
@@ -49,6 +49,7 @@
   nav .right a span {
     display: none;
   }
+
   /* Hero */
   .hero {
     padding: 0 20px;
