Contact Form changed

--- a/css/styles.css
+++ b/css/styles.css
@@ -258,60 +258,7 @@ nav .right a span {
   background-color: #555;
 }
 
-/* Contact */
-.contact-section {
-  padding: 0 50px;
-  margin-bottom: 100px;
-}
-
-.contact-section h2{
-  font-size: 35px;
-}
-
-.contact-section .group{
-  display: flex;
-  gap: 50px;
-}
-
-.contact-section .group .text{
-  flex: 3;
-  margin-top: 20px;
-}
-
-.contact-section .group form{
-  flex: 3;
-  display: flex;
-  flex-direction: column;
-}
-
-.contact-section .group form input,
-.contact-section .group form textarea{
-  font-family: "Poppins", sans-serif;
-  border: 2px solid var(--link-color);
-  background-color: transparent;
-  padding: 10px;
-  margin-bottom: 15px;
-  outline: none;
-  resize: none;
-}
-
-
-.contact-section .group form button{
-  font-size: 16px;
-  font-family: "Poppins", sans-serif;
-  color: #fff;
-  background-color: var(--link-color);
-  border: none;
-  height: 50px;
-  cursor: pointer;
-  transition: .9;
-}
-
-.contact-section .group form button:hover{
-  filter: brightness(.9);
-}
-
-.skills-section, .education-section, .showcase-section, .contact-section {
+.skills-section, .education-section, .showcase-section {
   animation: fadeInUp 1.2s ease-in-out;
 }
 
