--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 :root {
+  --background-color: #eeeff1;
   --text-color: #1a1c20;
   --link-color: #4a76ee;
-  --background-color: #eeeff1;
 }
 
 * {
@@ -26,13 +26,20 @@ a {
   text-decoration: none;
 }
 
-/* NAVBAR */
+/* NavBar */
 nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: var(--background-color);
+  z-index: 1000;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 50px;
-  height: 80px;
+  padding: 10px 50px;
+  transition: transform 0.3s ease;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 nav .left a {
@@ -57,218 +64,22 @@ nav .right a span {
   margin-left: 5px;
 }
 
-/* Hero */
-.hero {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0 50px;
-  margin: 50px 0;
-  margin-bottom: 280px;
-  gap: 40px;
+.nav-hidden {
+  transform: translateY(-100%);
 }
 
-.hero .text {
-  flex: 5;
-}
-
-.hero .text h2 {
-  font-size: 45px;
-}
-
-.hero .text .links {
-  margin-top: 25px;
-}
-
-.hero .text .links a {
-  display: inline-block;
-  padding: 5px 10px;
-  border: 2px solid var(--link-color);
-  border-radius: 5px;
-  margin-right: 10px;
-  margin-bottom: 10px;
-  transition: 0.1s;
-}
-
-.hero .text .links a:hover {
-  color: var(--text-color);
-  border: 2px solid var(--text-color);
-}
-
-.hero .headIMG {
-  flex: 2;
-  display: flex;
-  justify-content: right;
-}
-
-.hero .headIMG img {
-  border-radius: 50%;
-  width: 350px;
-}
-
-/* Skills */
-.skills-section {
-  padding: 0 50px;
-  margin-bottom: 280px;
-}
-
-.skills-section h2 {
-  text-align: center;
-  font-size: 35px;
-}
-.skills-section .text {
-  text-align: center;
-  margin-bottom: 20px;
-}
-
-.skills-section .cells{
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-}
-
-.skills-section .cells .cell{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-
-    width: 200px;
-    padding: 10px 20px;
-    margin: 10px;
-    border: 1.5px solid #d3d3d3;
-    border-radius: 5px;
-
-}
-
-.skills-section .cells .cell img{
-    width: 30px;
-    height: 30px;
-    object-fit: contain;
-    border-radius: 2px;
-}
-
-.skills-section .cells .cell span{
-    font-size: 18px;
-}
-
-/* Education */
-.education-section {
-  padding: 0 50px;
-  margin-bottom: 280px;
-}
-
-.education-section h2{
-  font-size: 35px;
-  margin-bottom: 30px;
-}
-
-.education-section .group{
-    display: flex;
-    align-items: center;
-    gap: 50px;
-}
-
-.education-section .group .school-details{
-  text-align: center;
-  flex: 2;
-}
-
-.education-section .group .school-details img{
-  width: 200px;
-  aspect-ratio: 1/1;
-  object-fit: cover;
-  margin-bottom: 10px;
-}
-
-.education-section .group .school-details p{
-  font-weight: 600;
-}
-.education-section .group .school-details p:last-child{
-  font-weight: normal;
-}
-
-.education-section .group .text{
-  flex: 8;
-}
-
-/* Showcase */
-.showcase-section {
-  padding: 0 50px;
-  margin-bottom: 280px;
-}
-
-.showcase-section h2 {
-  text-align: center;
-  font-size: 35px;
-}
-
-.showcase-section .text {
-  text-align: center;
-  margin-bottom: 20px;
-}
-
-.showcase-section .cells {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-}
-
-.showcase-section .cells .cell {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-  width: 250px;
-  padding: 20px;
-  margin: 10px;
-  border: 1.5px solid #d3d3d3;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-.showcase-section .cells .cell img {
-  width: 150px;
-  height: 70px;
-  object-fit: contain;
-  border-radius: 2px;
-}
-
-.showcase-section .cells .cell span {
-  font-size: 18px;
-  font-weight: bold;
-}
-
-.showcase-section .cells .cell p {
-  font-size: 14px;
-  text-align: center;
-}
-
-.github-btn {
-  padding: 8px 15px;
-  background-color: var(--link-color);
-  color: #fff;
-  text-decoration: none;
-  border-radius: 5px;
-  transition: background-color 0.3s ease;
-}
-
-.github-btn:hover {
-  background-color: #555;
-}
-
-.skills-section, .education-section, .showcase-section {
-  animation: fadeInUp 1.2s ease-in-out;
+main {
+  padding-top: 90px;
 }
 
 @keyframes fadeInUp {
   0% {
-      opacity: 0;
-      transform: translateY(20px);
+    opacity: 0;
+    transform: translateY(20px);
   }
+
   100% {
-      opacity: 1;
-      transform: translateY(0);
+    opacity: 1;
+    transform: translateY(0);
   }
 }
